overflow-y --> overflow-x (fixes #24)

--- a/sass/_responsive-utilities.scss
+++ b/sass/_responsive-utilities.scss
@@ -10,7 +10,7 @@ img, canvas, iframe, video, svg { max-width: 100%; }
 /* Wrap tables or pre elements in a div with this class */
 
 .overflow-container {
-  overflow-y: scroll;
+  overflow-x: scroll;
 }
 
 /*
